--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://github.com/mantzavinos004/web_challs/" width="800" height="600"></iframe>
+<iframe src="https://github.com/mantzavinos004/web_challs/blob/main/exploit.php" width="800" height="600"></iframe>
